objects/cloudworx_Document_Template__c.object
<CustomObject>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>Unique name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_cloudworx_Document_Template_ID__c</fullName>
        <label>Old cloudworx Document Template ID</label>
        <type>TextArea</type>
    </fields>
    <label>Document Template</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>cloudworx Document Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Jaeger</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Label__c</field>
            <operation>contains</operation>
            <value>Jäger</value>
        </filters>
        <label>Jäger</label>
        <sharedTo>
            <group>VR24_VH24_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kainz</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Label__c</field>
            <operation>contains</operation>
            <value>Kainz</value>
        </filters>
        <label>Kainz</label>
        <sharedTo>
            <group>VR24_VH24_Admin</group>
        </sharedTo>
    </listViews>
</CustomObject>